--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ngxs/router-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
+    "@soundng/rx-subscribe": "^2.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
