--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ngxs/form-plugin": "^3.7.2",
     "@ngxs/router-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "@soundng/rx-subscribe": "^2.0.0",
