--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url:
-    username:
-    password:
+    url: ${SKYRIM_DB_URL}
+    username: ${SKYRIM_DB_USERNAME}
+    password: ${SKYRIM_DB_PASSWORD}
 
   jpa:
     database: postgresql
