--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,7 +72,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>8.1.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
