--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --extract-css=false",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
