--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,15 @@
-events { }
+worker_processes 4; # Heroku dynos have at least four cores.
+
+error_log stderr;
+pid /var/run/nginx.pid;
+
+events {
+  worker_connections 1024;
+}
 
 http {
-  include /etc/nginx/mime.types;
+  access_log /dev/stdout;
+  server_tokens off; # Hide nginx version in Server header & page footers
 
-  server {
-    listen 80;
-    server_name Skyrim-market;
-    root /usr/share/nginx/html;
-    index index.html;
-
-    location / {
-      try_files $uri $uri/ /index.html;
-    }
-  }
+  include /etc/nginx/conf.d/*.conf;
 }
