--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,4 +12,5 @@ http {
   server_tokens off; # Hide nginx version in Server header & page footers
 
   include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/mime.types;
 }
