--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: java $JAVA_OPTS -cp target/classes:target/dependency/* com.skyrimmarket.backend.BackendApplication
+web: java -Dserver.port=$PORT -jar target/backend-0.0.1-SNAPSHOT.jar
