Front-end: base analytic

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "@ngxs/router-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "@soundng/rx-subscribe": "^2.0.0",
+    "echarts": "^5.2.2",
     "firebase": "^8.10.0",
+    "ngx-echarts": "^7.1.0",
     "ngx-mat-select-search": "^3.3.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
