--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,3 +37,7 @@ build/
 
 ### Docker env file ###
 env-file
+
+### Static resources ###
+/src/main/resources/static/*
+/src/main/resources/templates/*
